--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="boxtext">
 	<div class="text">
 		<p>Happy New Yeah</p>
-	<span>2023</span>
+	<span>2024</span>
 	</div>
 </div>
 <div class="city">
@@ -142,6 +142,12 @@
 <audio autoplay loop controls> 
 	<source src="nhac.mp3" type="audio/mpeg">
 </audio>
+<script>
+    window.onload = function() {
+        var audio = document.getElementById("myAudio");
+        audio.play();
+    };
+</script>
 <!-- partial -->
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/fscreen%401.0.1.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/Stage%400.1.4.js'></script>
