--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 <div class="boxtext">
 	<div class="text">
-		<p>Happy New Yeah</p>
+		<p>Happy New Year</p>
 	<span>2024</span>
 	</div>
 </div>
