--- a/index.html
+++ b/index.html
@@ -143,10 +143,13 @@
 	<source src="nhac.mp3" type="audio/mpeg">
 </audio>
 <script>
-    window.onload = function() {
-        var audio = document.getElementById("myAudio");
-        audio.play();
-    };
+    document.addEventListener('DOMContentLoaded', function() {
+		setTimeout(function() {
+			var audio = document.getElementById("myAudio");
+        	audio.play();
+		},3000);
+        
+    });
 </script>
 <!-- partial -->
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/329180/fscreen%401.0.1.js'></script>
